2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: better DESTDIR/libdir support (steffen)

2002-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	
	* mime: New field_decode, extended testsuite.

2002-09-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl (tcltest::tooManyMessage): Additional command to create
	  different error messages for 8.3 and 8.4. Used in the testsuite
	  of pop3.

2002-08-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cmdline:
	* counter:
	* dns:
	* ftpd:
	* html:
	* ncgi:
	* examples/ftp: Cleaned up nits ('info exist' --> 'info exists').

2002-08-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* examples/ftp: Fixed problem in ftpdemo.tcl.

2002-08-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* nntp: Updated documentation, see Tcllib SF #597102.

	* Makefile.in (install-doc): Fixed problem noted by Elchonon
	  Edelson. Code to inline man.macros appended to existing
	  files. Multiple execution of 'make install-doc' thus extended
	  the manpages of tcllib with multiples of their original
	  content. Not anymore.

2002-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* exif: Applied patch #582828. Partially applied #530970.

2002-08-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (DOC_EXP): Use the tclsh found during configuration
	  to run mpexpand. This ensures that mpexpand does not pick
	  something from the path on its own, possibly something too old
	  to understand TCLLIBPATH. Problem noted by Elchonon Edelson
	  <edelson@pobox.com>.

	* mime: Accepted SF Tcllib FR #595240. This entails the donation
	  of the personal mail filter mbot, as written and used by
	  Marshall T. Rose, as an example of the usage of the mime and
	  smtp packages.

	* mime (smtp): Followup to patch SF #557520/2 (See 2002-07-25).

2002-08-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	