@@ -1,9 +1,9 @@
-[manpage_begin smtpd n 1.0]
+[manpage_begin smtpd n 1.1]
 [comment {-*- tcl -*- doctools manpage}]
 [moddesc   {Tcl SMTP Server Package}]
 [titledesc {Tcl SMTP server implementation}]
 [require Tcl 8.3]
-[require smtpd [opt 1.0]]
+[require smtpd [opt 1.1]]
 [description]
 [para]
 
@@ -15,16 +15,27 @@ and the standard SMTP port (25).
 [para]
 
 This package was designed to permit testing of Mail User Agent code
-from a developers workstation. In particular, on Unix platforms
-binding to the SMTP port requires root privileges. I would not
-recommend running any script-based server as root unless there is some
-method for dropping root privileges immediately after the socket is
-bound. Under Windows platforms, it is not necessary to have root or
-administrator privileges to bind low numbered sockets. However,
-security on these platforms is weak anyway. In short, this code should
-probably not be used as a permanently running MTA on an Internet
-connected server, even though we are careful not to evaluate remote
-user input.
+from a developers workstation. [emph "It does not attempt to deliver \
+mail to your mailbox." ] Instead users of this package are expected to
+write a procedure that will be called when mail arrives. Once this
+procedure returns, the server has nothing further to do with the mail.
+
+[section SECURITY]
+
+On Unix platforms binding to the SMTP port requires root privileges. I
+would not recommend running any script-based server as root unless
+there is some method for dropping root privileges immediately after
+the socket is bound. Under Windows platforms, it is not necessary to
+have root or administrator privileges to bind low numbered
+sockets. However, security on these platforms is weak anyway.
+
+[para]
+
+In short, this code should probably not be used as a permanently
+running Mail Transfer Agent on an Internet connected server, even
+though we are careful not to evaluate remote user input. There are
+many other well tested and security audited programs that can be used
+as mail servers for internet connected hosts.
 
 [section COMMANDS]
 
@@ -107,9 +118,15 @@ address.
 
 Callback to validate and authorize a recipient email address
 
+[lst_item "[option -deliverMIME] [arg proc]"]
+
+Callback used to deliver mail as a mime token created by the tcllib
+[package mime] package.
+
 [lst_item "[option -deliver] [arg proc]"]
 
-Callback used to deliver email.
+Callback used to deliver email. This option has no effect if
+the [option -deliverMIME] option has been set.
 
 [list_end]
 
@@ -185,19 +202,38 @@ callback and permits you to verify a local mailbox and accept mail for
 a local user address during RCPT command handling. To reject mail,
 throw an error as above. The error message is ignored.
 
+[lst_item [strong {deliverMIME callback}]]
+
+The deliverMIME callback is called once a mail message has been
+successfully passed to the server. A mime token is constructed from
+the sender, recipients and data and the users procedure it called with
+this single argument. When the call returns, the mime token is cleaned
+up so if the user wishes to preserve the data she must make a copy.
+
+[nl]
+[example {
+ proc deliverMIME {token} {
+     set sender [lindex [mime::getheader $token From] 0]
+     set recipients [lindex [mime::getheader $token To] 0]
+     set mail "From $sender [clock format [clock seconds]]"
+     append mail "\n" [mime::buildmessage $token]
+     puts $mail
+ }
+}]
+
 [lst_item [strong {deliver callback}]]
 
 The deliver callback is called once a mail message has been
-successfully passed to the server. The procedure is called with the
-sender, a list of recipients and the text of the mail as a list of
-lines. For example:
+successfully passed to the server and there is no -deliverMIME option
+set. The procedure is called with the sender, a list of recipients and
+the text of the mail as a list of lines. For example:
 
 [nl]
 [example {
  proc deliver {sender recipients data} {
-    set mail "From $sender \\
+    set mail "From $sender \
                [clock format [clock seconds]]"
-    append mail "\\n" [join $data "\\n"]
+    append mail "\n" [join $data "\n"]
     puts "$mail"
  }
 }]
