@@ -1,140 +1,157 @@
-'\" -*- nroff -*-
-'\" Copyright (C) 2001 Pat Thoyts <patthoyts@users.sourceforge.net>
-'\" 
-'\" RCS: @(#) $Id: smtpd.n,v 1.2 2002/01/18 21:03:34 patthoyts Exp $
-'\" 
-.TH smtpd n 1.0 smtpd "Tcl SMTP Server Package"
+'\"
+'\" Generated from smtpd.man by mpexpand with fmt.nroff
+'\"
+.so man.macros
+.TH "smtpd" n 1.1 smtpd "Tcl SMTP Server Package"
 .BS
-'\" Note:  do not modify the .SH NAME line immediately below!
 .SH NAME
 smtpd \- Tcl SMTP server implementation
-.SH SYNOPSIS
-.B package require Tcl 8.3
+'\" -*- tcl -*- doctools manpage
+.SH "SYNOPSIS"
+package require \fBTcl 8.3\fR
 .sp
-.B package require smtpd ?1.0?
+package require \fBsmtpd ?1.1?\fR
 .sp
-\fB::smtpd::start\fR \fR?\fImyaddr\fR?\fR \fR?\fIport\fR?\fR
+\fB::smtpd::start\fR ?\fImyaddr\fR? ?\fIport\fR?\fR
 .sp
-\fB::smtpd::stop\fR
+\fB::smtpd::stop\fR \fR
 .sp
-\fB::smptd::configure\fR \fR?\fIoption\fR \fIvalue\fR?\fR \fR?\fIoption\fR \fIvalue\fR \fI...\fR?\fR
+\fB::smptd::configure\fR ?\fIoption\fR \fIvalue\fR? ?\fIoption\fR \fIvalue\fR \fI...\fR?\fR
 .sp
-\fB::smtpd::cget\fR \fR?\fIoption\fR
+\fB::smtpd::cget\fR ?\fIoption\fR?\fR
 .sp
 .BE
-.SH DESCRIPTION
+.SH "DESCRIPTION"
 .PP
-The \fBsmtpd\fR package provides a simple Tcl-only server library for
-the Simple Mail Transfer Protocol as described in RFC 821 and RFC 2821.
-By default the server will bind to the default network address and the
-standard SMTP port (25). 
-.sp
+The \fBsmtpd\fR package provides a simple Tcl-only server library
+for the Simple Mail Transfer Protocol as described in RFC 821 and RFC
+2821.  By default the server will bind to the default network address
+and the standard SMTP port (25).
+.PP
 This package was designed to permit testing of Mail User Agent code
-from a developers workstation. In particular, on Unix platforms
-binding to the SMTP port requires root privileges. I would not
-recommend running any script-based server as root unless there is
-some method for dropping root privileges immediately after the socket
-is bound. Under Windows platforms, it is not necessary to have root or
-administrator privileges to bind low numbered sockets. However,
-security on these platforms is weak anyway. In short, this code should
-probably not be used as a permanently running MTA on an Internet
-connected server, even though we are careful not to evaluate remote user
-input.
-.SH COMMANDS
+from a developers workstation. \fIIt does not attempt to deliver  mail to your mailbox.\fR Instead users of this package are expected to
+write a procedure that will be called when mail arrives. Once this
+procedure returns, the server has nothing further to do with the mail.
+.SH "SECURITY"
+On Unix platforms binding to the SMTP port requires root privileges. I
+would not recommend running any script-based server as root unless
+there is some method for dropping root privileges immediately after
+the socket is bound. Under Windows platforms, it is not necessary to
+have root or administrator privileges to bind low numbered
+sockets. However, security on these platforms is weak anyway.
+.PP
+In short, this code should probably not be used as a permanently
+running Mail Transfer Agent on an Internet connected server, even
+though we are careful not to evaluate remote user input. There are
+many other well tested and security audited programs that can be used
+as mail servers for internet connected hosts.
+.SH "COMMANDS"
 .TP
-\fB::smtpd::start\fR \fR?\fImyaddr\fR?\fR \fR?\fIport\fR?\fR
+\fB::smtpd::start\fR ?\fImyaddr\fR? ?\fIport\fR?\fR
 Start the service listening on \fIport\fR or the default port 25. If
-\fImyaddr\fR is given as a domain-style name or numerical dotted-quad
-IP address then the server socket will be bound to that network
-interface. By default the server is bound to all network
+\fImyaddr\fR is given as a domain-style name or numerical
+dotted-quad IP address then the server socket will be bound to that
+network interface. By default the server is bound to all network
 interfaces. For example:
-.br
-.CS
-set sock [smtpd::start [info hostname] 0]
-.CE
-.br
-will bind to the hosts internet interface on the first available
-port.
-.br
+.sp
+.nf
+  set sock [::smtpd::start [info hostname] 0]
+.fi
+.sp
+will bind to the hosts internet interface on the first available port.
+.sp
 At present the package only supports a single instance of a SMTP
 server. This could be changed if required at the cost of making the
 package a little more complicated to read. If there is a good reason
 for running multiple SMTP services then it will only be necessary to
-fix the \fIoptions\fR array and the \fBsmtpd::stopped\fR variable usage.
+fix the \fBoptions\fR array and the \fB::smtpd::stopped\fR variable
+usage.
 .sp
-As the server code uses \fIfileevent\fR(n) handlers to process the
+As the server code uses \fBfileevent\fR(n) handlers to process the
 input on sockets you will need to run the event loop. This means
-either you should be running from within \fIwish\fR(1) or you should 
-\fIvwait\fR(n) on the \fBsmtpd::stopped\fR
-variable which is set when the server is stopped.
+either you should be running from within \fBwish\fR(1) or you
+should \fBvwait\fR(n) on the \fB::smtpd::stopped\fR variable which is
+set when the server is stopped.
 .TP
-.B ::smtpd::stop
+\fB::smtpd::stop\fR \fR
 Halt the server and release the listening socket. If the server has
-not been started then this command does nothing. The
-.B smtpd::stopped
-variable is set for use with \fIvwait\fR(n).
-.br
+not been started then this command does nothing.
+The \fB::smtpd::stopped\fR variable is set for use with
+\fBvwait\fR(n).
+.sp
 It should be noted that stopping the server does not disconnect any
-currently active sessions as these are operating over an independant
+currently active sessions as these are operating over an independent
 channel. Only explicitly tracking and closing these sessions, or
 exiting the server process will close down all the running
-sessions. This is similar to the ususal unix daemon practice where the
-server performs a \fIfork\fR(2) and the client session continues on
+sessions. This is similar to the usual unix daemon practice where the
+server performs a \fBfork\fR(2) and the client session continues on
 the child process.
 .TP
-\fB::smptd::configure\fR \fR?\fIoption\fR \fIvalue\fR?\fR
-\fR?\fIoption\fR \fIvalue\fR \fI...\fR?\fR
+\fB::smptd::configure\fR ?\fIoption\fR \fIvalue\fR? ?\fIoption\fR \fIvalue\fR \fI...\fR?\fR
 Set configuration options for the SMTP server. Most values are the
 name of a callback procedure to be called at various points in the
-SMTP protocol. See the CALLBACKS section for details of the procedures.
+SMTP protocol. See the \fBCALLBACKS\fR section for details of the
+procedures.
 .RS
 .TP
-\fB-validate_host proc\fR
-Callback to authenticate new connections based on the ip-address of the
-client.
+\fB-validate_host\fR \fIproc\fR
+Callback to authenticate new connections based on the ip-address of
+the client.
 .TP
-\fB-validate_sender proc\fR
-Callback to authenticate new connections based on the senders email address.
+\fB-validate_sender\fR \fIproc\fR
+Callback to authenticate new connections based on the senders email
+address.
 .TP
-\fB-validate_recipient proc\fR
+\fB-validate_recipient\fR \fIproc\fR
 Callback to validate and authorize a recipient email address
 .TP
-\fB-deliver proc\fR
-Callback used to deliver email.
+\fB-deliverMIME\fR \fIproc\fR
+Callback used to deliver mail as a mime token created by the tcllib
+\fBmime\fR package.
+.TP
+\fB-deliver\fR \fIproc\fR
+Callback used to deliver email. This option has no effect if
+the \fB-deliverMIME\fR option has been set.
 .RE
 .TP
-.SH CALLBACKS
+\fB::smtpd::cget\fR ?\fIoption\fR?\fR
+If no \fIoption\fR is specified the command will return a list of all
+options and their current values. If an option is specified it will
+return the value of that option.
+.SH "CALLBACKS"
 .TP
-.B validate_host callback
+\fBvalidate_host callback\fR
 This procedure is called with the clients ip address as soon as a
 connection request has been accepted and before any protocol commands
 are processed. If you wish to deny access to a specific host then an
 error should be returned by this callback. For example:
-.PP
-.CS
+.sp
+.nf
  proc validate_host {ipnum} {
     if {[string match "192.168.1.*" $ipnum]} {
        error "go away!"
     }
  }
-.CE
-.PP
+.fi
+.sp
 If access is denied the client will receive a standard message that
 includes the text of your error, such as:
-.br
-.B 550 Access denied: I hate you.
-.br
+.sp
+.nf
+ 550 Access denied: I hate you.
+.fi
+.sp
 As per the SMTP protocol, the connection is not closed but we wait for
-the client to send a QUIT command. Any other commands cause a \fB503
-Bad Sequence\fR error.
+the client to send a QUIT command. Any other commands cause a
+\fB503 Bad Sequence\fR error.
 .TP
-.B validate_sender callback
+\fBvalidate_sender callback\fR
 The validate_sender callback is called with the senders mail address
 during processing of a MAIL command to allow you to accept or reject
 mail based upon the declared sender. To reject mail you should throw
 an error. For example, to reject mail from user "denied":
-.br
-.CS
+.sp
+.nf
  proc validate_sender {address} {
     eval array set addr \\
          [mime::parseaddress $address]
@@ -143,48 +160,62 @@ an error. For example, to reject mail from user "denied":
     }
     return    
  }
-.CE
-.PP
+.fi
+.sp
 The content of any error message will not be passed back to the client.
 .TP
-.B validate_recipient callback
+\fBvalidate_recipient callback\fR
 The validate_recipient callback is similar to the validate_sender
 callback and permits you to verify a local mailbox and accept mail for
 a local user address during RCPT command handling. To reject mail,
 throw an error as above. The error message is ignored.
 .TP
-.B deliver callback
+\fBdeliverMIME callback\fR
+The deliverMIME callback is called once a mail message has been
+successfully passed to the server. A mime token is constructed from
+the sender, recipients and data and the users procedure it called with
+this single argument. When the call returns, the mime token is cleaned
+up so if the user wishes to preserve the data she must make a copy.
+.sp
+.nf
+ proc deliverMIME {token} {
+     set sender [lindex [mime::getheader $token From] 0]
+     set recipients [lindex [mime::getheader $token To] 0]
+     set mail "From $sender [clock format [clock seconds]]"
+     append mail "\n" [mime::buildmessage $token]
+     puts $mail
+ }
+.fi
+.TP
+\fBdeliver callback\fR
 The deliver callback is called once a mail message has been
-successfully passed to the server. The procedure is called with the
-sender, a list of recipients and the text of the mail as a list of
-lines. For example:
-.CS
+successfully passed to the server and there is no -deliverMIME option
+set. The procedure is called with the sender, a list of recipients and
+the text of the mail as a list of lines. For example:
+.sp
+.nf
  proc deliver {sender recipients data} {
-    set mail "From $saddr(address) \\
-               [clock format [clock seconds]]"
-    append mail "\\n" [join $data "\\n"]
+    set mail "From $sender  [clock format [clock seconds]]"
+    append mail "\n" [join $data "\n"]
     puts "$mail"
  }
-.CE
-.PP
+.fi
+.sp
 Note that the DATA command will return an error if no sender or
 recipient has yet been defined.
-.RE
+.SH "VARIABLES"
 .TP
-.SH VARIABLES
-.TP
-.B ::smtpd::stopped
-This variable is set to \fItrue\fR during the ::smtpd::stop command to
-permit the use of the \fIvwait\fR(n) command.
-'\".B::smtpd::postmaster\fR
-'\"The e-mail address of the person that is the contact for the server.
-.SH AUTHOR
-Written by Pat Thoyts 
-.RE <patthoyts@users.sourceforge.net>
-.SH COPYRIGHT
+\fB::smtpd::stopped\fR
+This variable is set to \fBtrue\fR during the \fB::smtpd::stop\fR
+command to permit the use of the \fBvwait\fR(n) command.
+'\" ::smtpd::postmaster
+'\" The e-mail address of the person that is the contact for the server.
+.SH "AUTHOR"
+Written by Pat Thoyts \fImailto:patthoyts@users.sourceforge.net\fR.
+.SH "COPYRIGHT"
 This software is distributed in the hope that it will be useful, but
-WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
-or FITNESS FOR A PARTICULAR PURPOSE.  See the file 'license.terms' for
-more details.
-.SH KEYWORDS
+WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the file
+"\fIlicense.terms\fR" for more details.
+.SH "KEYWORDS"
 smtpd, smtp, services, RFC 821, RFC 2821, vwait, socket
