@@ -1,3 +1,7 @@
+2002-10-08  Pat Thoyts <patthoyts@users.sourceforge.net>
+
+        * smtpd: implemented feature request #531531 to use MIME tokens
+
 2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* Makefile.in: better DESTDIR/libdir support (steffen)
